# TaskWeaver-AI

./: .gitignore  Readme.md  env.example  main.py  pyproject.toml  requirements.txt
core/: __init__.py  llm_client.py  models.py  processor.py
examples/: sample_project.mermaid
generators/: __init__.py  excel_generator.py  html_generator.py
parsers/: __init__.py  ai_mermaid_parser.py  mermaid_parser.py  nlp_parser.py
test/: __init__.py  test_ai_mermaid_parser.py  test_core.py  test_mermaid_parser.py
